deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project4-api-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: project4-api
  template:
    metadata:
      labels:
        app: project4-api
    spec:
      containers:
      - name: project4-api
        image: seojun1116/university-api:36
        resources:
          requests:
            memory: "128Mi"
            cpu: "500m"
          limits:
            memory: "256Mi"
            cpu: "1000m"
        ports:
        - containerPort: 8088

        startupProbe:
          httpGet:
            path: /actuator/health
            port: 8088
          failureThreshold: 10
          periodSeconds: 10

        livenessProbe:
          httpGet:
            path: /actuator/health/liveness
            port: 8088
          initialDelaySeconds: 10
          periodSeconds: 20

        readinessProbe:
          httpGet:
            path: /actuator/health/readiness
            port: 8088
          initialDelaySeconds: 5
          periodSeconds: 5
