service.yaml
apiVersion: v1
kind: Service
metadata:
  name: project4-api-service
spec:
  type: ClusterIP
  selector:
    app: project4-api
  ports:
  - port: 8088
    targetPort: 8088
